--- a/part_search.html
+++ b/part_search.html
@@ -3,8 +3,10 @@
     <title>Part Search</title>
   </head>
   <body>
+    <a href="index.html">Home</a>
+    <p></p>
     <form action="/rw">
-      <h3>Part search: </h3>
+      <h2>Part search: </h2>
       <label for="search">Enter part number: </label><input type="text" id="partSearch"> <button name="Search" id="search">Search</button> <button name="Clear" id="clear">Clear</button>
     </form>
   </body>
